get geographer mode + fix white space

--- a/rawhtml.css
+++ b/rawhtml.css
@@ -170,6 +170,16 @@ body {
     right:0%;
   }
 
+  #geomode
+  {
+    margin-top:70px;
+    margin-right:10px;
+    position:fixed;
+    top:0%;
+    right:0%;
+    color: lightgreen;
+  }
+
   a
   {
     color: white;
@@ -186,6 +196,8 @@ body {
     z-index: 4;
     min-height: 300px;
     min-width: 150px;
+    max-height: 50%;
+    max-width: 50%;
     overflow-y: auto;
     background-color: #000000;
     border-radius: 30px;
@@ -216,3 +228,9 @@ body {
     width: 100%;
     color: #B31942;
   }
+
+  #mode
+  {
+    color: lightgreen;
+  }
+
